--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,27 @@
-fastapi
-uvicorn[standard]
-requests
-packaging
-aiohttp
+# FastAPI和相关依赖
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+
+# WebSocket支持
+websockets==12.0
+
+# HTTP客户端
+httpx==0.25.2
+aiohttp==3.9.1
+
+# JSON处理
+orjson==3.9.10
+
+# 类型检查和验证
+pydantic==2.5.0
+typing-extensions==4.8.0
+
+# 异步支持
+asyncio-mqtt==0.13.0
+
+# 其他工具库
+python-multipart==0.0.6
+python-dotenv==1.0.0
+
+# 日志
+loguru==0.7.2
